part4/4.01/kube/manifests/log-output.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise
  name: log-output-svc
spec:
  type: NodePort
  selector:
    app: log-output
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
        - name: log-output
          image: ronituohino/log-output:4.01.2
          volumeMounts:
            - name: config-volume
              mountPath: /usr/src/app/config
              readOnly: true
          resources:
            limits:
              cpu: "200m"
              memory: "256Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3000
      volumes:
        - name: config-volume
          configMap:
            name: configmap
            items:
              - key: information.txt
                path: information.txt
