part4/4.01/kube/manifests/ping-pong-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise
  name: postgres-svc
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: web
  clusterIP: None
  selector:
    app: postgresapp
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: exercise
  name: postgres-stset
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      # volumes:
      #   - name: pg-pvc-vol
      #     persistentVolumeClaim:
      #       claimName: pg-pvc
      containers:
        - name: postgres
          image: postgres:17.0-alpine3.20
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            # - name: pg-pvc-vol
            #   mountPath: /var/lib/postgresql/data
            #   subPath: postgres
            - name: postgres-data-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 128Mi
---
# apiVersion: v1
# kind: PersistentVolumeClaim
# metadata:
#   namespace: exercise
#   name: pg-pvc
# spec:
#   accessModes:
#     - ReadWriteOnce
#   resources:
#     requests:
#       storage: 1Gi
#   storageClassName: standard-rwo
