part4/4.01/kube/manifests/ping-pong.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: exercise
  name: ping-pong-svc
spec:
  type: NodePort
  selector:
    app: ping-pong
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: exercise
  name: ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: ronituohino/ping-pong:4.01.1
          resources:
            limits:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /healthz
              port: 3001
